css/main.css
/* ... */
.card .type {
  display: flex;
  position: absolute;
  top: 10px;
  left: 10px;
  width: 25px;
  margin: 5px;
}

.card .type a {
  z-index: 99999;
}

.card .type img {
  display: flex;
  margin: 2px;
  max-height: 20px;
}

.card .tag {
  background: #25242594;
  padding: 5px;
  border-radius: 10px;
  margin: 3px;
  font-size: 11px;
}

.card .forms {
  background: #25242594;
  padding: 8px;
  border-radius: 10px;
  margin: 5px;
  font-size: 12px;
}

.card .sprite {
  height: 140px;
  border-radius: 15px;
  padding: 15px;
  position: relative;
  margin: 25px auto;
}

.card .sprite img {
  background: url("https://i.pinimg.com/originals/ca/e0/1a/cae01ab5cce960db0d7819cc96e97ce8.png");
  top: 0;
  z-index: 1;
  position: absolute;
  max-width: 150px;
  min-width: 150px;
  max-height: 150px;
  border: 2px solid #724b73;
  border-radius: 100px;
  box-shadow: 3px 7px 3px 3px #00000026;
}

.card .sprite .overlay {
  background: linear-gradient(90deg, #fff 0, #6898b9 54%, #ce0079 100%);
  opacity: 0.1;
  z-index: 2;
  border-radius: 100px;
  height: 150px;
  width: 150px;
  left: 75px;
  margin: -15px;
}

.card .info {
  height: 300px;
  width: 100%;
  margin: -5px auto;
  padding: 0;
  border-radius: 15px;
  color: #fff;
}

.card .info h1 {
  font-size: 2em;
  text-shadow: 3px 3px 3px #be2559;
}
.card:before,
.card:after {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border-radius: 15px;
  background-image: linear-gradient(
    115deg,
    transparent 0%,
    #00e7ff 30%,
    #ff00e7 70%,
    transparent 100%
  );
  background-position: 0% 0%;
  background-repeat: no-repeat;
  background-size: 300% 300%;
  mix-blend-mode: color-dodge;
  opacity: 0.2;
  z-index: 1;
}

.card.active:before {
  opacity: 1;
  -webkit-animation: none;
  animation: none;
  -webkit-transition: none;
  transition: none;
  background-image: linear-gradient(
    115deg,
    transparent 0%,
    transparent 25%,
    rgba(0, 231, 255, 0.7) 45%,
    rgba(255, 0, 231, 0.7) 55%,
    transparent 70%,
    transparent 100%
  );
}

@-webkit-keyframes holoSparkle {
  0% {
    opacity: 0;
  }
  12% {
    opacity: 1;
  }
  70% {
    opacity: 0.5;
  }
  95% {
    opacity: 0.2;
  }
}

@keyframes holoSparkle {
  0% {
    opacity: 0;
  }
  12% {
    opacity: 1;
  }
  70% {
    opacity: 0.5;
  }
  95% {
    opacity: 0.2;
  }
}
@-webkit-keyframes holoGradient {
  3% {
    opacity: 0;
  }
  5% {
    background-position: 0% 0%;
  }
  7% {
    opacity: 0.5;
  }
  9% {
    background-position: 100% 100%;
  }
  11% {
    opacity: 0;
  }
  50% {
    opacity: 0;
    background-position: 100% 100%;
  }
  55% {
    opacity: 0.3;
  }
  70% {
    opacity: 0;
    background-position: 0% 0%;
  }
}
@keyframes holoGradient {
  3% {
    opacity: 0;
  }
  5% {
    background-position: 0% 0%;
  }
  7% {
    opacity: 0.5;
  }
  9% {
    background-position: 100% 100%;
  }
  11% {
    opacity: 0;
  }
  50% {
    opacity: 0;
    background-position: 100% 100%;
  }
  55% {
    opacity: 0.3;
  }
  70% {
    opacity: 0;
    background-position: 0% 0%;
  }
}

/* Test */
.test {
  display: block;
  position: absolute;
  top: 20px;
  right: 20px;
  z-index: 9999999;
}

.btn.btn-test {
  color: white;
  background: #9e659d;
  opacity: 0.6;
  border-radius: 10px;
}

.btn.btn.btn-test:hover {
  color: white;
  background: #9e659d;
  opacity: 1;
  border-radius: 5px;
}

/* Loading */

#bg-loading {
  display: flex;
  z-index: 98;
  position: absolute;
  height: 100vh;
  width: 100%;
  background-color: #000;
}

#pokeball {
  z-index: 99;
  width: 66px;
  height: 66px;
  border-radius: 50%;
  background: radial-gradient(
      circle at center center,
      #fefefe 10px,
      #000 0,
      #000 33%,
      transparent 0
    ),
    -webkit-gradient(linear, left top, right top, color-stop(46%, transparent), color-stop(0, #000), color-stop(53.5%, #000), color-stop(0, transparent));
  background: radial-gradient(
      circle at center center,
      #fefefe 10px,
      #000 0,
      #000 33%,
      transparent 0
    ),
    linear-gradient(90deg, transparent 46%, #000 0, #000 53.5%, transparent 0);
  box-shadow: 0 0 0 4px #b2007d;
  -webkit-transform-style: preserve-3d;
  transform-style: preserve-3d;
  -webkit-animation: spin 4000ms infinite;
  animation: spin 4000ms infinite;
}
#pokeball::before {
  position: absolute;
  content: "";
  top: 0;
  width: 100%;
  height: 100%;
  border-radius: inherit;
  background: -webkit-gradient(
    linear,
    left top,
    right top,
    color-stop(50%, #d11c34),
    color-stop(50%, #fefefe)
  );
  background: linear-gradient(90deg, #d11c34 50%, #fefefe 50%);
  -webkit-transform: translate3d(0, 0, -1em);
  transform: translate3d(0, 0, -1em);
  -webkit-clip-path: polygon(
    50% 0%,
    50% 50%,
    50% 120%,
    50% 120%,
    50% 100%,
    50% 50%,
    50% -20%,
    50% -20%
  );
  clip-path: polygon(
    50% 0%,
    50% 50%,
    50% 120%,
    50% 120%,
    50% 100%,
    50% 50%,
    50% -20%,
    50% -20%
  );
  -webkit-animation: pathShape 2000ms cubic-bezier(0, 0, 1, 1) infinite,
    colorChange 8000ms cubic-bezier(0, 0, 1, 1) infinite;
  animation: pathShape 2000ms cubic-bezier(0, 0, 1, 1) infinite,
    colorChange 8000ms cubic-bezier(0, 0, 1, 1) infinite;
}
#pokeball::after {
  position: absolute;
  content: "";
  top: 0;
  width: 100%;
  height: 100%;
  border-radius: inherit;
  background: #b2007d;
  -webkit-transform: translate3d(0, 0, -2em);
  transform: translate3d(0, 0, -2em);
}
/* ... */

